Code health: use new java API