@@ -49,7 +49,7 @@ public class PrimitiveModelTableTest
         List<PrimitiveDuo> expected = List.of(new PrimitiveDuo(111, 1), new PrimitiveDuo(222, 1));
 
         PrimitiveDuo one = runner().runAndGet(SELECT_DUO_QUERY, PrimitiveModel_PrimitiveDuo_JdbcAdapter.ADAPTER);
-        assertThat(one).isEqualTo(expected.get(0));
+        assertThat(one).isEqualTo(expected.getFirst());
 
         List<PrimitiveDuo> fetched = runner().fetchAll(SELECT_DUO_QUERY, PrimitiveModel_PrimitiveDuo_JdbcAdapter.ADAPTER);
         assertThat(fetched).containsExactlyElementsIn(expected).inOrder();
@@ -65,7 +65,7 @@ public class PrimitiveModelTableTest
         List<PrimitiveTrio> expected = List.of(new PrimitiveTrio((byte) 2, (short) 3, 'M'));
 
         PrimitiveTrio one = runner().runAndGet(SELECT_TRIO_QUERY, PrimitiveModel_PrimitiveTrio_JdbcAdapter.ADAPTER);
-        assertThat(one).isEqualTo(expected.get(0));
+        assertThat(one).isEqualTo(expected.getFirst());
 
         List<PrimitiveTrio> fetched = runner().fetchAll(SELECT_TRIO_QUERY, PrimitiveModel_PrimitiveTrio_JdbcAdapter.ADAPTER);
         assertThat(fetched).containsExactlyElementsIn(expected).inOrder();
