@@ -20,13 +20,13 @@ import java.util.List;
 public record BatchEntityDataList<D>(@NotNull List<EntityData<D>> batch) implements BatchEntityData<D> {
     public BatchEntityDataList {
         assert !batch.isEmpty() : "Entity batch is empty: " + batch;
-        assert batch.stream().allMatch(data -> data.columns().equals(batch.get(0).columns())) :
+        assert batch.stream().allMatch(data -> data.columns().equals(batch.getFirst().columns())) :
             "All batch data items must have the same columns: " + batch;
     }
 
     @Override
     public @NotNull Collection<? extends Column> columns() {
-        return batch.get(0).columns();
+        return batch.getFirst().columns();
     }
 
     @Override
